fix(dialogs): Reduce excessive padding and prevent tab button overlap (for `data-orientation='vertical'`` only) (#131)(#136)
- Decrease excessive padding in dialogs/popups to improve layout consistency
- Prevent tab buttons from overlapping when space is limited, specifically for desktop (`[data-orientation="vertical"]`)
- Address issues related to "The 'Subscription' button hangs on top of everything in the settings" (#131)

Changes summary:
Reduced excessive padding in dialogs/popups and fixed tab button overlap in desktop layouts, addressing issues caused by increased spacing in the extension designm, resolving layout issues related to #131.

--- a/src/sass/abstract/_vars.scss
+++ b/src/sass/abstract/_vars.scss
@@ -20,10 +20,10 @@
 	/* ? --- Paddings --- */
 	--p-chat-bubble: 1.2rem;
 	--p-contextmenu: 0.7rem;
-	--p-prompt-textarea: 0.7rem;
+	// --p-prompt-textarea: 0.7rem;
 	--p-tooltips: 0.2rem;
 	--p-btn: 0.7rem;
-	--p-dialog: 2rem;
+	--p-dialog: 1.4rem;
 	--p-between-chats: 1rem;
 
 	/* ? --- Margins --- */
@@ -126,7 +126,7 @@
 		--p-chat-bubble: .8rem;
 		--br-chat-bubble: calc(var(--br) * 1.55);
 		--p-contextmenu: .5rem;
-		--p-prompt-textarea: 0.5rem;
+		// --p-prompt-textarea: 0.5rem;
 		--p-dialog: 0.3rem;
 		--br-dialog: calc(var(--br) * 1.5);
 		--p-sidebar-nav: 0.3rem;
